--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>// ToDo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> -->
   <link rel="stylesheet" href="./src/style/global.css">
   <base href="/">
 </head>
