--- a/todo-app/src/dialogs/table-filter-dialog/table-filter-dialog.html
+++ b/todo-app/src/dialogs/table-filter-dialog/table-filter-dialog.html
@@ -2,21 +2,24 @@
 <template>
     <ux-dialog>
         <ux-dialog-header>
-            Filter ${field}
+            <h3>Filter ${field}</h3>
         </ux-dialog-header>
 
         <ux-dialog-body>
-            <div repeat.for="value of distinctValues">
-                <label>
-                    <input type="checkbox" checked.bind="selectedValues.has(value)" change.trigger="toggleValue(value)">
-                    ${value}
-                </label>
+            <div class="col my-4">
+                <div repeat.for="value of distinctValues">
+                    <label>
+                        <input type="checkbox" checked.bind="selectedValues.has(value)"
+                            change.trigger="toggleValue(value)">
+                        ${value}
+                    </label>
+                </div>
             </div>
         </ux-dialog-body>
 
-        <ux-dialog-footer>
-            <button click.trigger="apply()">Apply</button>
-            <button click.trigger="cancel()">Cancel</button>
+        <ux-dialog-footer class="my-3">
+            <button class="btn btn-outline-custom" click.trigger="apply()">Apply</button>
+            <button class="btn btn-outline-custom" click.trigger="cancel()">Cancel</button>
         </ux-dialog-footer>
     </ux-dialog>
 </template>
