column selection in table

--- a/todo-app/src/dialogs/column-select-dialog/column-select-dialog.html
+++ b/todo-app/src/dialogs/column-select-dialog/column-select-dialog.html
@@ -2,17 +2,24 @@
     <require from="./column-select-dialog.css"></require>
     <div class="column-select-dialog">
         <h2>Select and Reorder Columns</h2>
-        <div class="column-list">
-            <div class="column-item ${column === dragOverItem ? 'drag-over' : ''}" repeat.for="column of columns"
-                draggable="true" drag-start.trigger="dragStart($event, column)"
-                drag-over.trigger="dragOver($event, column)" drag-leave.trigger="dragLeave($event)"
-                drop.trigger="drop($event, column)">
-                <label class="checkbox-container">
-                    <input type="checkbox" checked.bind="column.selected" disabled.bind="column.key === 'title'">
-                    <span class="checkmark"></span>
-                </label>
-                <span class="column-name">${column.name}</span>
-                <span class="drag-handle">&#8942;</span>
+        <div class="column-list-container">
+            <div class="column-list">
+                <div class="column-item" repeat.for="column of columns.slice(0, Math.ceil(columns.length / 2))">
+                    <div class="form-check">
+                        <label for="${column.name}" class="form-check-label column-name">${column.name}</label>
+                        <input type="checkbox" class="form-check-input" id="${column.name}"
+                            checked.bind="column.selected" disabled.bind="column.key === 'title'">
+                    </div>
+                </div>
+            </div>
+            <div class="column-list">
+                <div class="column-item" repeat.for="column of columns.slice(Math.ceil(columns.length / 2))">
+                    <div class="form-check">
+                        <label for="${column.name}" class="form-check-label column-name">${column.name}</label>
+                        <input type="checkbox" class="form-check-input" id="${column.name}"
+                            disabled.bind="column.key === 'title'">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="dialog-actions">
