--- a/todo-app/src/app.html
+++ b/todo-app/src/app.html
@@ -17,7 +17,7 @@
 			</div>
 			<div class="sidebar-action-icon" title="Focused Input">
 				<a load="quick-todo">
-					<i class="bi bi-bug"></i>
+					<i class="bi bi-node-plus"></i>
 				</a>
 			</div>
 			<div repeat.for="item of sidebarIcons" class="sidebar-action-icon"
