--- a/todo-app/src/routes/quick-todo-page/quick-todo-page.html
+++ b/todo-app/src/routes/quick-todo-page/quick-todo-page.html
@@ -1,7 +1,7 @@
 <template>
 	<require from="./quick-todo-page.css"></require>
 	<div class="quick-todo-page">
-		<div class="quick-todo-container">
+		<div class="quick-todo-container ${isInputExpanded ? 'expanded' : ''}">
 			<div class="quick-todo-page-form ${isExpanded ? 'expanded' : ''}">
 				<div class="quick-todo-main-content">
 					<div class="quick-todo-input-wrapper">
@@ -31,14 +31,32 @@
 				</div>
 			</div>
 
-			<div class="recently-added-section styled-list" show.bind="recentlyAdded.length > 0">
+			<!-- <div class="recently-added-section styled-list" show.bind="recentlyAdded.length > 0">
 				<h2>Recently Added</h2>
 				<div class="mb-3 row">
 					<label for="recentItemSize" class="col-sm-2 col-form-label" style="max-width:150px;">Items to show:
 					</label>
-					<div class="col-sm-1" style="max-width:90px;">
-						<input type="number" class="form-control" id="recentItemSize" value.bind="recentItemsSize"
+					<div class="col-sm-1" style="max-width:110px;">
+						<input type="number" class="form-control pe-0" id="recentItemSize" value.bind="recentItemsSize"
 							min="1">
+					</div>
+				</div>
+
+				<div class="recently-added-items">
+					<div class="recently-added-item" repeat.for="recent of recentlyAdded">
+						<span class="item-title">${recent.title}</span>
+						<span class="item-time">${recent.createdDate | relativeTime}</span>
+					</div>
+				</div>
+			</div> -->
+
+			<div class="recently-added-section styled-list" show.bind="recentlyAdded.length > 0">
+				<div class="d-flex justify-content-between align-items-center mb-3">
+					<h2 class="mb-0">Recently Added</h2>
+					<div class="d-flex align-items-center">
+						<label for="recentItemSize" class="me-2 mb-0">Items to show:</label>
+						<input type="number" class="form-control form-control-sm" id="recentItemSize"
+							value.bind="recentItemsSize" min="1" style="width: 60px;">
 					</div>
 				</div>
 
