--- a/todo-app/src/routes/home/home.html
+++ b/todo-app/src/routes/home/home.html
@@ -29,18 +29,25 @@
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="col-12 mt-5">
-			<div class="section-header">
-				<h3 click.trigger="toggleSection('allItems')">
-					All items
-					<i class="bi bi-chevron-right section-caret ${allItemsExpanded ? 'expanded' : ''}"></i>
-				</h3>
-			</div>
-			<div class="section-content ${allItemsExpanded ? 'expanded' : ''}" ref="allItemsContent">
-				<div class="section-content-inner">
-					<action-item-table action-items.bind="actionItemService.actionItems"></action-item-table>
+
+
+			<div class="col-12 mt-5">
+				<div class="section-header">
+					<h3 click.trigger="toggleSection('allItems')">
+						All items
+						<i class="bi bi-chevron-right section-caret ${allItemsExpanded ? 'expanded' : ''}"></i>
+					</h3>
+					<label class="show-completed-checkbox">
+						<input type="checkbox" checked.bind="showCompleted">
+						Show Completed
+					</label>
+				</div>
+				<div class="section-content ${allItemsExpanded ? 'expanded' : ''}" ref="allItemsContent">
+					<div class="section-content-inner">
+						<action-item-table action-items.bind="actionItemService.actionItems"
+							show-completed.bind="showCompleted"></action-item-table>
+					</div>
 				</div>
 			</div>
 		</div>
