--- a/todo-app/src/routes/quick-todo-page/quick-todo-page.html
+++ b/todo-app/src/routes/quick-todo-page/quick-todo-page.html
@@ -17,7 +17,8 @@
 						<i class="bi bi-chevron-down"></i>
 					</div>
 				</div>
-				<div class="quick-todo-additional-fields" show.bind="isExpanded">
+
+				<div class="quick-todo-additional-fields">
 					<div class="quick-todo-field-wrapper">
 						<label for="due-date">Due Date</label>
 						<input type="date" id="due-date" value.bind="dueDate">
@@ -42,7 +43,8 @@
 				</div>
 
 				<div class="recently-added-items">
-					<div class="recently-added-item" repeat.for="recent of recentlyAdded">
+					<div class="recently-added-item ${recent.animate ? 'animate-in' : ''}"
+						repeat.for="recent of recentlyAdded">
 						<span class="item-title">${recent.title}</span>
 						<span class="item-time">${recent.createdDate | relativeTime}</span>
 					</div>
