--- a/todo-app/src/routes/home/home.html
+++ b/todo-app/src/routes/home/home.html
@@ -15,7 +15,8 @@
 				</div>
 			</div>
 			<div class="section-header">
-				<h3 click.trigger="toggleSection('dueSoon')">
+				<!-- <h3 click.trigger="toggleSection('dueSoon')"> -->
+				<h3 click.trigger="toggleDueSoonExpandedState()">
 					Due soon
 					<i class="bi bi-chevron-right section-caret ${dueSoonExpanded ? 'expanded' : ''}"></i>
 				</h3>
