--- a/todo-app/src/app.html
+++ b/todo-app/src/app.html
@@ -44,6 +44,17 @@
 
 		<div class="main-content">
 			<au-viewport></au-viewport>
+			<div class="toast-container position-fixed bottom-0 end-0 p-3">
+				<div id="successToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+					<div class="toast-header">
+						<strong class="me-auto">Success</strong>
+						<button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+					</div>
+					<div class="toast-body">
+						Todo item created successfully!
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<footer class="app-footer">
